20121230 man/fuse.1: fix typo (Fred).
20121230 man/fuse.1: fix typo (thanks, Fred) (Stuart).
20121230 man/fuse.1: use conformant and more consistent syntax (Stuart).
20121231 AUTHORS,README,THANKS,fuse.c,man/fuse.1,menu.[ch],menu_data.dat,
         peripherals/if[12].[ch],ui.c,ui/options.dat: rename 'Interface I' and
         'Interface II' to 'Interface 1' and 'Interface 2' (Stuart).
20121231 man/fuse.1: use non-breaking spaces where appropriate (Stuart).
20130101 man/fuse.1: fix text in SPECTRANET EMULATION section (Fred).
20130102 menu.c,menu_data.dat,settings.{dat,pl}: fix command line options and
         add menu items for Opus Discovery and DISCiPLE ROM selection (Stuart).
20130102 fuse.c,man/fuse.1,utils.c: wire up the --discipledisk option and
         document it (Stuart).
20130102 hacking/peripheral_tests.txt: add instructions for testing the
         DISCiPLE interface (Stuart).
20130103 configure.ac,fuse.c: make some URLs point to the new sourceforge forge
         and update copyright date to 2013 (Sergio).
20130103 configure.ac,fuse.c,README: add trailing slashes to URLs where
         appropriate (Stuart).
20130103 peripherals/disk/disciple.c: fix inverted printer busy logic (Stuart).
20130104 ui/win32/win32ui.c: empty sound buffer when emulation is paused using a
         shortcut key on Win32 UI (thanks, Lee Tonks) (Sergio).
20130105 roms/{Makefile.am,README.copyright,disciple.rom}: add DISCiPLE ROM 
         with EPSON printer support (Fred).
20130106 compat/mkstemp.c: remove unused variable (Sergio).
20130106 peripherals/disk/disciple.c: swap order of ROM banks (Stuart).
20130107 man/fuse.1: initial documentation of the drive emulation flags
         (bug #250) (Fred).
20130123 memory.c: correct restore of pentagon 1024 memory ports from snapshots
         (bug #275) (rkd77).
20130126 peripherals/nic/w5100_socket.c: make sure write_pending member of 
         nic_w5100_socket_t is initialised (bug #275) (rkd77).